# wetting-angle-kit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  verify_imports.py
.github/workflows/: releases.yml  testing.yml
docs/: README.md  build_log.txt
docs/examples/: binning_ca.py  parsing_trajectory_files.py  sliced_ca.py  visualisation_sliced_traj.py
docs/source/: conf.py  index.rst
docs/source/API/: index.rst
docs/source/introduction/: Installation.rst  Introduction.rst  Theoretical_foundations.rst  index.rst
docs/source/tutorials/: Binning_method_tuto.rst  Parser_tutorial.rst  Sliced_method_tuto.rst  Visualization_sliced_droplet.rst  Visualization_trajectories_comparison_methods.rst  index.rst
docs/tutorials/: Binning_method_tuto.md  Parser_tutorial.md  Sliced_method_tuto.md  Visualization_sliced_droplet.md  Visualization_trajectories_comparison_methods.md
docs/tutorials/result_dump_spherical_sliced/: all_alfas.npy  all_popts.npy  all_surfaces.npy
hydroangleanalyzer/contact_angle_method/sliced_method/: multi_processing.py  surface_defined.py
hydroangleanalyzer/parser/: base_parser.py
hydroangleanalyzer/visualization_angles/: binning_trajectory_evolution.py  comparison_methods.py
src/wetting_angle_kit/: __init__.py  io_utils.py
src/wetting_angle_kit/contact_angle_methods/: __init__.py  analyzer.py  factory.py
src/wetting_angle_kit/contact_angle_methods/binning/: __init__.py  angle_fitting.py  surface_definition.py
src/wetting_angle_kit/contact_angle_methods/sliced/: __init__.py  angle_fitting.py  parallel.py  surface_definition.py
src/wetting_angle_kit/parsers/: __init__.py  ase.py  base.py  factory.py  lammps_dump.py  xyz.py
src/wetting_angle_kit/visualization/: __init__.py  base_trajectory_analyzer.py  binning_trajectory_analyzer.py  droplet_slice_plots.py  method_comparison.py  sliced_trajectory_analyzer.py  surface_plots.py
tests/: README  conftest.py  test_edge_cases.py  test_geometry_projection.py  test_io_utils.py  test_visualization.py
tests/test_contact_angle_methods/: test_binning_method.py  test_sliced_method.py
tests/test_parser/: test_parser_ase.py  test_parser_dump.py  test_parser_xyz.py
wetting-angle-kit/contact_angle_method/: factory.py
wetting-angle-kit/contact_angle_method/sliced_method/: angle_fitting_sliced.py  multi_processing.py
wetting-angle-kit/parser/: parser_dump.py
wetting-angle-kit_JOSS/: paper.bib  paper.md
wetting_angle_kit/: __init__.py  io_utils.py
wetting_angle_kit/contact_angle_method/: __init__.py  contact_angle_analyzer.py  factory.py
wetting_angle_kit/contact_angle_method/binning_method/: __init__.py  angle_fitting_binning.py  surface_definition.py
wetting_angle_kit/contact_angle_method/sliced_method/: __init__.py  angle_fitting_sliced.py  multi_processing.py  surface_defined.py
wetting_angle_kit/parser/: __init__.py  base_parser.py  factory.py  parser_ase.py  parser_dump.py  parser_xyz.py
wetting_angle_kit/visualization_angles/: __init__.py  base_trajectory_analyzer.py  binning_trajectory_evolution.py  comparison_methods.py  graphs_circle_slice.py  sliced_trajectory_evolution.py  tools_visu.py
wetting_angle_kit_JOSS/: paper.bib  paper.md
