[project]
name = "wetting_angle_kit"
description = "A Python library to parse MD trajectories from LAMMPS and ASE and measure the contact through different methods"
authors = [
    { name = "Gabriel", email = "gabriel.taillandier@matgenix.com" },
    { name = "Matgenix", email = "info@matgenix.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "matplotlib>=3.9.0",
    "plotly>=5.24.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.4.6",
    "pre-commit",
]
doc = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinxemoji",
    "sphinx-copybutton",
    "sphinx-argparse",
    "sphinx-code-tabs",
    "sphinx-issues",
    "nbsphinx>=0.8.0",
    "sphinxcontrib-mermaid",
    "myst-parser",
]
viz = [
    "ipython>=8.0.0",
]
ase = ["ase>=3.23.0"]
ovito = ["ovito>=3.12.0"]
# Convenience extra: installs both trajectory backends and the optional
# visualization helpers. Use ``[all,dev,doc]`` for a full developer setup.
all = ["ase>=3.23.0", "ovito>=3.12.0", "ipython>=8.0.0"]

[project.urls]
"Homepage" = "https://github.com/Matgenix/wetting_angle_kit"
"Bug Tracker" = "https://github.com/Matgenix/wetting_angle_kit/issues"
"Documentation" = "https://matgenix.github.io/wetting-angle-kit"

[build-system]
requires = ["setuptools>=77", "versioningit ~= 1.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["wetting_angle_kit*"]

[tool.versioningit]
default-version = "0.1.2"

[tool.versioningit.vcs]
method = "git"
default-tag = "0.1.2"

[tool.versioningit.write]
file = "wetting_angle_kit/_version.py"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
# NumPy reductions (np.mean, etc.) and ASE attributes (frame.positions) are
# typed as Any in their stubs, so functions returning them legitimately trip
# no-any-return.  Re-enable if/when those returns are wrapped in np.asarray()
# or cast(np.ndarray, ...).
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# scipy, mpl_toolkits and plotly have no stubs installed.  Disable only
# import-untyped (module exists but lacks py.typed / stubs); import-not-found
# (module doesn't exist at all — catches typos and removed dependencies) stays
# active.
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
# ASE's ase.io.read() is typed as Union[Atom, Atoms]; all call-sites in
# parser_ase.py receive Atoms in practice, so suppress only the union-attr
# cascade rather than silencing the entire file.
module = ["ase.*", "wetting_angle_kit.parser.parser_ase"]
disable_error_code = ["union-attr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose --durations=10 --strict-markers --strict-config"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require trajectory fixtures and run end-to-end",
    "unit: marks unit tests (default; the marker is optional)",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = []
